fix home mobile text align

--- a/style.css
+++ b/style.css
@@ -120,6 +120,11 @@ a {
   ul {
     flex-direction: column;
   }
+  
+  h1 {
+    text-align: center;
+    
+  }
 
   body {
     gap: 1svh;
